[tool.poetry]
name = "cit"
version = "0.1.0"
description = "让github的下载速度比之前快一千倍"
authors = ["中箭的吴起 <solider245@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sh = "^1.14.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
